--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "Elaina-Ai",
-    "version": "3.0.0",
-    "description": "Elaina-Ai Simple Bot WhatsApp By Aril",
+    "name": "Kaneki-v16",
+    "version": "16.0.0",
+    "description": "Kaneki-v16 crazy Bot WhatsApp By Salah",
     "main": "index.js",
     "type": "module",
     "directories": {
